doc/2.9/_sources/reference/generated/ak.typetracer.typetracer_with_report.rst.txt
ak.typetracer.typetracer_with_report
====================================

Defined in `awkward.typetracer <https://github.com/scikit-hep/awkward/blob/e8bec70057d479d7ed07f44720cc8ca85a907584/src/awkward/typetracer.py>`__ on `line 177 <https://github.com/scikit-hep/awkward/blob/e8bec70057d479d7ed07f44720cc8ca85a907584/src/awkward/typetracer.py#L177>`__.

.. py:function:: ak.typetracer.typetracer_with_report(form: awkward.forms.Form | str | collections.abc.Mapping, *, buffer_key: str | collections.abc.Callable = '{form_key}', highlevel: bool = False, behavior: collections.abc.Mapping | None = None, attrs: collections.abc.Mapping[str, awkward._typing.Any] | None = None) -> tuple[awkward.contents.Content, awkward._nplikes.typetracer.TypeTracerReport]

   :param form: The form of the Awkward
                Array to build a typetracer-backed array from.
   :type form: :py:obj:`ak.forms.Form` or str/dict equivalent
   :param buffer_key: Python format string containing
                      ``"{form_key}"`` and/or ``"{attribute}"`` or a function that takes these
                      as keyword arguments and returns a string to use as a ``form_key``
                      for low-level typetracer buffers.
   :type buffer_key: str or callable
   :param highlevel: If True, return an :py:obj:`ak.Array`; otherwise, return
                     a low-level :py:obj:`ak.contents.Content` subclass.
   :type highlevel: bool
   :param behavior: Custom :py:obj:`ak.behavior` for the output array, if
                    high-level.
   :type behavior: None or dict
   :param attrs: Custom attributes for the output array, if
                 high-level.
   :type attrs: None or dict

   Returns a typetracer array and associated report object built from a form
   with labelled form keys.

